--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,14 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
 # testing
 /coverage
 
 # production
 /build
+/.idea
 
 # misc
 .DS_Store
@@ -21,3 +20,15 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+db.json
+json-server.json
+.vscode/settings.json
+
+yarn.lock
+
+datim.json
+
+arua.json
+test.json
+worker*
+database.json
