--- a/package.json
+++ b/package.json
@@ -2,16 +2,40 @@
   "name": "data-import-wizard",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
+    "@dhis2/d2-ui-app": "^2.0.0",
+    "@dhis2/d2-ui-core": "latest",
+    "@dhis2/d2-ui-header-bar": "^5.0.3",
+    "@dhis2/d2-ui-table": "^2.0.0",
+    "@material-ui/core": "^3.3.2",
+    "@material-ui/icons": "^3.0.1",
+    "alasql": "^0.4.11",
+    "antd": "^3.16.2",
+    "axios": "^0.19.0",
+    "d2": "^31.2.1",
+    "d3": "^5.7.0",
+    "file-saver": "^2.0.2",
+    "lodash": "^4.17.11",
+    "mobx": "^5.5.2",
+    "mobx-react": "^5.3.6",
+    "moment": "^2.22.2",
+    "prop-types": "latest",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-dropzone": "^10.1.7",
+    "react-notifications": "^1.4.3",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "react-select": "^3.0.4",
+    "shortid": "^2.2.14",
+    "xlsx": "^0.14.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build && cd build && zip -r -D data-import-wizard.zip .",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,5 +51,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "babel-plugin-import": "^1.12.0",
+    "customize-cra": "^0.4.1",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
+    "react-app-rewire-mobx": "^1.0.9",
+    "react-app-rewired": "^2.1.3",
+    "workerize-loader": "^1.0.4"
   }
 }
