--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.11",
     "mobx": "^5.5.2",
     "mobx-react": "^5.3.6",
+    "mobx-router": "^0.0.20",
     "moment": "^2.22.2",
     "prop-types": "latest",
     "react": "^16.8.6",
