--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@dhis2/d2-ui-app": "^2.0.0",
     "@dhis2/d2-ui-core": "latest",
     "@dhis2/d2-ui-header-bar": "^5.0.3",
+    "@dhis2/d2-ui-org-unit-dialog": "^6.3.0",
+    "@dhis2/d2-ui-period-selector-dialog": "^6.3.0",
     "@dhis2/d2-ui-table": "^2.0.0",
     "@material-ui/core": "^3.3.2",
     "@material-ui/icons": "^3.0.1",
