--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dhis2/d2-ui-table": "^2.0.0",
     "@material-ui/core": "^3.3.2",
     "@material-ui/icons": "^3.0.1",
+    "@reach/router": "^1.2.1",
     "alasql": "^0.4.11",
     "antd": "^3.16.2",
     "axios": "^0.19.0",
@@ -28,7 +29,7 @@
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.7",
     "react-notifications": "^1.4.3",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
     "react-select": "^3.0.4",
     "shortid": "^2.2.14",
