--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "d2": "^31.2.1",
     "d3": "^5.7.0",
     "file-saver": "^2.0.2",
+    "global": "^4.4.0",
+    "json-server": "^0.16.1",
     "lodash": "^4.17.11",
     "mobx": "^5.5.2",
     "mobx-react": "^5.3.6",
