--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.19.0",
     "d2": "^31.2.1",
     "d3": "^5.7.0",
+    "dayjs": "^1.8.25",
     "file-saver": "^2.0.2",
     "global": "^4.4.0",
     "json-server": "^0.16.1",
