--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-select": "^3.0.4",
     "shortid": "^2.2.14",
     "source-map-explorer": "^2.1.0",
-    "xlsx": "^0.14.0"
+    "ssf": "^0.11.2",
+    "xlsx": "^0.16.9"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
